🐛 Institutional Theme home page layout fixes
This commit addresses layout issues on the home page of the
Institutional Theme by:
- removing the hamburger menu since it was only
holding the search bar
- centering the application name in smaller breakpoints
- setting the application name to the left next to the logo in larger
breakpoints

Ref:
- https://github.com/notch8/palni_palci_knapsack/issues/142

--- a/app/assets/stylesheets/themes/institutional_repository.scss
+++ b/app/assets/stylesheets/themes/institutional_repository.scss
@@ -39,14 +39,8 @@
 
   ////// Navbar //////
 
-  .navbar-collapse {
-    justify-content: space-between;
-  }
-
-  // styles the top nav menu application name that is centered
+  // styles the top nav menu application name
   .institutional-repository-application-name {
-    text-align: center;
-
     span {
       color: #fff;
       font-size: 20px;
